# alarma

./: CMake  CMake.txt  CMakeLists.txt  cmake_uninstall.cmake.in  main.c
controller/: controller.c  controller.h
model/: alarma.c  alarma.h
resource/: alarma.gresource.xml
view/: ui.c  ui.h
